--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -1,18 +1,31 @@
 @charset "utf-8";
-/*@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic);*/
+/* Best not to overwrite the users presets if at all possible. Can adjust size by percent in MQ. */ 
+/* Assumptions: 100% = 1 em ~= 16px ~= 14pt */
 html {
-  min-width: 680px;
+  font-size: 100%; 
+  min-width: 640px;
 }
 body {
   overflow-x: hidden;
   overflow-y: scroll;
   margin-bottom: 5rem;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 100%;
   text-rendering: optimizeLegibility;
-  background-color: #000;
+  /*font-family: 'Exo 2', sans-serif; */
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+  -webkit-text-size-adjust:none;
+  -moz-text-size-adjust:none;
+  -ms-text-size-adjust:none;
+  -webkit-text-size-adjust:100%;
+  -moz-text-size-adjust:100%;
+  -ms-text-size-adjust:100%;
+  /*background-color: #000;*/
+  /*background-color: #cef;*/
+  /*background-color: rgba(66, 89, 104, 1);*/ /* Causes breadcrumb indicators yto be hidden */
+  background-color: #222D35;
   color: #fff;
 }
+
 h1 small {
   color: #8F8100; /*#AADD6D;*/ /*#71B2C9;*/ /*#4298B5;*/ /*#AB650D;*/ /*#8F8100;*/
 }
