--- a/app/styles/interactives.css
+++ b/app/styles/interactives.css
@@ -1,21 +1,29 @@
 @charset "utf-8";
+
+#recharge {
+  width: 64rem;
+  height: 36rem;
+}
+
 .interactive {
-  margin: 0rem 0rem 0rem 0rem;
+  /*margin: 0rem 0rem 0rem 0rem;*/
 }
 .viz {
+  width: 100%;
+  height: 100%;
   margin-left, margin-right: auto;
   cursor: default;
 }
 
 /* Data Display */
 .data-display {
-  z-index: 100;
   position: absolute;
-  top: 2rem;
+  top: 0rem;
   left: 1rem;
+  margin-top: -2rem;
 }
 .year-display {
-  font-size: 10em;
+  font-size: 9em;
   color: rgba(0,0,0,0.9);
 }
 .data-value {
@@ -23,11 +31,11 @@
 }
 .legend {
   z-index: 200;
-  position: absolute;
+  /*position: absolute;*/
   width: 26rem;
-  left:1rem;
-  top: 11rem;
-  margin-top: 1rem;
+  /*left: 1rem;*/
+  /*top: 0rem;*/
+  margin-top: -1rem;
   line-height: 0.1rem;
   font-size: 1rem;
   background-color: rgba(100, 100, 100, 0.2);
@@ -35,7 +43,7 @@
   /*border-bottom-left-radius: 4em;*/
   border-radius: 8px;
   border: 1px solid #000;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 .legend-item {
   width: 24rem;
@@ -45,7 +53,7 @@
   border: 1px solid #000;
 }
 .legend-recharge {
-  height: 1rem;
+  height: 2.5rem;
 }
 .legend-wells {
   height: 5.5rem;
@@ -56,8 +64,13 @@
 
 /* Map */
 .geo-bounds {
-  margin-left: 12rem;
-  margin-top: 2rem;
+  position: absolute;
+  width: 46rem;
+  /*left: 10rem;*/
+  margin-left: 15rem;
+  margin-top: 0rem;
+  /*margin-left: auto;*/
+  /*margin-right: 1rem;*/
 }
 .geo-bounds.recharge {
 }
@@ -137,7 +150,7 @@
   position: absolute;
   bottom: 1.2em;
   right: 5em;
-  color: #555;
+  color: #333;
   font-size: 0.6rem;
   font-style: italic;
 }
