--- a/app/styles/transitions.css
+++ b/app/styles/transitions.css
@@ -2,6 +2,8 @@
 .view-animate-container {
   position: relative;
   height: 100%!important;
+/*  margin-left: auto;
+  margin-right: auto;*/
 }
 .view-animate {
 }
