--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -2,30 +2,9 @@
 	<div class="explore">
     <!-- <div class="outline"><h1>Explore the Edwards Aquifer<br/><small>Select a location within the San Antonio Segment of the Balcones Fault Zone</small></h1></div> -->
 	
-    <!-- Section 0 -->
-    <div id="section00">
-      <div skrollr class="div-fixed z-200" data-0="top:6.6rem;" data-1000="opacity:1; left:5rem;" data-2000="opacity:0; left:50rem;">
-        <!-- <div class="text-frame">
-          <p class="outline"><h1>Explore the Edwards Aquifer<br/></h1></p>
-        </div> -->
-        <div class="outline"><h1>Explore the Edwards Aquifer</h1></div>
-      </div>
-      <div skrollr class="div-fixed z-150" data-999="left:5rem;" data-1000="opacity:1; top:16rem;" data-2000="opacity:0; top:100rem;">
-        <video class="video-frame" preload="auto" autoplay loop muted>
-          <source src="../videos/720p/HCPSanMarcosRiver-loop3.webm" type="video/webm">
-          <source src="../videos/720p/HCPSanMarcosRiver-loop3.mp4" type="video/mp4">
-        </video>
-      </div>
-      <div skrollr class="div-fixed z-200" data-0="top:11rem;" data-1000="opacity:1; left:38rem;" data-2000="opacity:0; left:50rem;">
-        <div class="text-label">
-          <p>San Marcos River</p>
-        </div>
-      </div>
-    </div>
-
     <!-- Scroll Indicator -->
     <!-- <div skrollr class="div-fixed z-200" data-0="left:6rem;" data-1="opacity:1; top:53rem;" data-2000="opacity:0; top:58rem;"> -->
-    <div skrollr class="div-fixed z-200" data-0="top:12rem;" data-1000="opacity:1; left:6rem;" data-2000="opacity:0; left:-3rem;">
+    <div skrollr class="div-fixed z-200" data-0="top:12.6rem;" data-1000="opacity:1; left:6.5rem;" data-2000="opacity:0; left:-3rem;">
       <div class="scroll-link">Scroll to continue...
         <div id="holder">
           <div class="dot"></div>
@@ -33,28 +12,44 @@
         </div>
       </div>
     </div>
-    
+
+    <!-- Backgrounds -->
+    <div skrollr id="ripple-1" class="div-fixed z-100 background" data-0="opacity:0.2; top:0%;" data-4500="opacity:0.2; top:-100%;" data-5000="opacity:0;"></div>
+
+    <!-- Section 0 -->
+    <div id="section00">
+      <div skrollr class="div-fixed z-200" data-0="left:5rem;" data-1000="opacity:1; top:6.6rem;" data-2000="opacity:0; top:0rem;">
+        <div class="text-title"><h1>Explore the Edwards Aquifer</h1></div>
+      </div>
+      <div skrollr class="div-fixed z-150" data-999="left:5rem;" data-1000="opacity:1; top:16rem;" data-2000="opacity:0; top:100rem;">
+        <video class="video-frame" preload="auto" autoplay loop muted>
+          <source src="../videos/720p/HCPSanMarcosRiver-loop3.webm" type="video/webm">
+          <source src="../videos/720p/HCPSanMarcosRiver-loop3.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div skrollr class="div-fixed z-200" data-0="top:10.5rem;" data-1000="opacity:1; left:38rem;" data-2000="opacity:0; left:50rem;">
+        <div class="text-label">
+          <p>San Marcos River</p>
+        </div>
+      </div>
+    </div>
+
     <!-- Section 1 -->
     <div id="section01">
       <div skrollr class="div-fixed z-200" data-1999="top:6.6rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;">
-        <!-- <div class="text-frame">
-          <p alt="">Select a location within the San Antonio Segment of the Balcones Fault Zone</p>   
-        </div> -->
-        <div class="outline"><h1><small>Select a location within the San Antonio Segment of the Balcones Fault Zone</small></h1></div>
+        <div class="text-select"><p>Select a location within the San Antonio Segment of the Balcones Fault Zone</p></div>
       </div>
-      <div skrollr class="div-fixed z-150" data-1999="top:16rem;" data-2000="opacity:0; left:50rem;" data-3000="opacity:1; left:5rem;">
+      <div skrollr class="div-fixed z-150" data-1999="left:5rem;" data-2000="opacity:0; top:50rem;" data-3000="opacity:1; top:16rem;">
         <div id="major-aquifers" class="interactive interactive-frame aquifers">
           <eaa-aquifers-map></eaa-aquifers-map>
         </div> 
       </div>
-      <div skrollr class="div-fixed z-200" data-1999="left:38rem;" data-2000="opacity:0; top:58rem;" data-3000="opacity:1; top:52rem;">
+      <div skrollr class="div-fixed z-200" data-1999="top:10.5rem;" data-2000="opacity:0; left:60rem;" data-3000="opacity:1; left:38rem;">
         <div class="text-label">
           <p>Texas Major Aquifers</p>
         </div>
       </div>
     </div>
-
-    <!-- <eaa-aquifers-map></eaa-aquifers-map> -->
 
   </div>
 </div>
