--- a/app/styles/explore.css
+++ b/app/styles/explore.css
@@ -2,29 +2,32 @@
 video.bgvexplore {
     background: url(../images/explore/HCPSanMarcosRiver-loop3.jpg) no-repeat;
   }
-.outline h1,small {
+/*.outline h1,small {
   text-shadow:
     -1px -1px 0 #000,  
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;
-}
-.outline h1 {
-  color: #AADD6D; /*#71B2C9;*/ /*#C6930A;*/ /*#AADD6D;*/ /*#AB650D;*/
-  font-size: 2em;
+}*/
+/*#71B2C9;*/ /*#C6930A;*/ /*#AADD6D;*/ /*#AB650D;*/
+/*.outline h1 {
+  margin-top: -2rem;
+  color: #AADD6D; 
+  font-size: 3em;
   font-weight: 700;
 }
 .outline h1 small {
   color: #fff;
   font-weight: 700;
-}
-.map-backing {
+}*/
+/*#222D35;*/
+/*.map-backing {
   margin-top: 3%;
   margin-left: auto;
   margin-right: auto;
   width: 94%;
   color: #fff;
-  background-color: #000; /*#222D35;*/
+  background-color: #000; 
   box-shadow: 0 0 1rem #000;
   border: 2px solid #71B2C9;
   -webkit-border-radius: 0 4rem 0;
@@ -32,8 +35,5 @@ video.bgvexplore {
   border-radius: 0 8rem 0;
   padding: 1rem 2rem 1rem 2rem;
   opacity: 0.75;
-}
+}*/
 
-.explore {
-  margin-left: -2rem;
-}
