Background imageon explore module. Better bg.  Further cleanup.

--- a/app/styles/skrollr.css
+++ b/app/styles/skrollr.css
@@ -304,6 +304,7 @@ body {
 #water-6 { background-image:url('../img/water.png'); }
 
 #ripple-1 { background-image:url('../images/explore/ripples.png'); }
+#ripple-2 { background-image:url('../images/explore/ripples-2.jpg'); }
 
 /* Caves & Karst */
 #ck-image-00 { background-image:url(../images/caves_karsts/DSC_0318_web_hd.jpg); }
