--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -14,7 +14,7 @@
     </div>
 
     <!-- Backgrounds -->
-    <div skrollr id="ripple-1" class="div-fixed z-100 background" data-0="opacity:0.2; top:0%;" data-4500="opacity:0.2; top:-100%;" data-5000="opacity:0;"></div>
+    <div skrollr id="ripple-1" class="div-fixed z-100 background" data-0="opacity:0.2; top:0%;" data-4500="opacity:0.2; top:-100%;"></div>
 
     <!-- Section 0 -->
     <div id="section00">
