--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -3,9 +3,8 @@
     <!-- <div class="outline"><h1>Explore the Edwards Aquifer<br/><small>Select a location within the San Antonio Segment of the Balcones Fault Zone</small></h1></div> -->
 	
     <!-- Scroll Indicator -->
-    <!-- <div skrollr class="div-fixed z-200" data-0="left:6rem;" data-1="opacity:1; top:53rem;" data-2000="opacity:0; top:58rem;"> -->
     <div skrollr class="div-fixed z-200" data-0="top:12.6rem;" data-1000="opacity:1; left:6.5rem;" data-2000="opacity:0; left:-3rem;">
-      <div class="scroll-link">Scroll to continue...
+      <div class="text-suggestion">Scroll to continue...
         <div id="holder">
           <div class="dot"></div>
           <div class="pulse"></div>      
@@ -47,6 +46,16 @@
       <div skrollr class="div-fixed z-200" data-1999="top:10.5rem;" data-2000="opacity:0; left:60rem;" data-3000="opacity:1; left:38rem;">
         <div class="text-label">
           <p>Texas Major Aquifers</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Click Indicator -->
+    <div skrollr class="div-fixed z-200" data-0="top:12.6rem;" data-3500="opacity:0; left:-3rem;" data-4000="opacity:1; left:6.5rem;">
+      <div class="text-suggestion">Select a Map Marker
+        <div id="holder">
+          <div class="dot"></div>
+          <div class="pulse"></div>      
         </div>
       </div>
     </div>
