--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container"> -->
   <div class="explore">
     <!-- Scroll Indicator -->
-    <div skrollr class="div-fixed z-200" data-0="top:12.6rem;" data-1000="opacity:1; left:6.5rem;" data-2000="opacity:0; left:-3rem;">
+    <div skrollr class="div-fixed z-500" data-0="top:54rem" data-1000="opacity:1; left:9rem;" data-2000="opacity:0; left:-10rem;">
       <div class="text-suggestion">Scroll to continue...
         <div id="holder">
           <div class="dot"></div>
@@ -11,20 +11,20 @@
     </div>
 
     <!-- Backgrounds -->
-    <div skrollr id="ripple-1" class="div-fixed z-100 background" data-0="opacity:0.2; top:0%;" data-4500="opacity:0.2; top:-100%;"></div>
+    <div skrollr id="ripple-1" class="div-fixed z-50 background flip-image-hor" data-0="left:-2rem;" data-1="opacity:0.1; top:0%;" data-500="opacity:0.3; top:-15%;" data-3500="opacity:0.3; top:-90%;" data-4000="opacity:0.1; top:-100%;"></div>
 
     <!-- Section 0 -->
     <div id="section00">
-      <div skrollr class="div-fixed z-200" data-0="left:5rem;" data-1000="opacity:1; top:6.6rem;" data-2000="opacity:0; top:0rem;">
-        <div class="text-title"><h1>Explore the Edwards Aquifer</h1></div>
+      <div skrollr class="div-fixed z-400" data-0="left:5rem;" data-1000="opacity:1; top:6.6rem;" data-2000="opacity:0; top:0rem;">
+        <div class="text-title text-spacer-left"><h1>Explore the Edwards Aquifer</h1></div>
       </div>
-      <div skrollr class="div-fixed z-150" data-999="left:5rem;" data-1000="opacity:1; top:16rem;" data-2000="opacity:0; top:100rem;">
+      <div skrollr class="div-fixed z-100" data-999="top:16rem; left:5rem;" data-1000="opacity:1;" data-2000="opacity:0;">
         <video class="video-frame" preload="auto" autoplay loop muted>
           <source src="../videos/720p/HCPSanMarcosRiver-loop3.webm" type="video/webm">
           <source src="../videos/720p/HCPSanMarcosRiver-loop3.mp4" type="video/mp4">
         </video>
       </div>
-      <div skrollr class="div-fixed z-200" data-0="top:10.5rem;" data-1000="opacity:1; left:38rem;" data-2000="opacity:0; left:50rem;">
+      <div skrollr class="div-fixed z-450" data-0="top:52rem;" data-1000="opacity:1; left:18rem;" data-2000="opacity:0; left:50rem;">
         <div class="text-label">
           <p>San Marcos River</p>
         </div>
@@ -33,15 +33,18 @@
 
     <!-- Section 1 -->
     <div id="section01">
-      <div skrollr class="div-fixed z-200" data-1999="top:6.6rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;">
-        <div class="text-select"><p>Select a location within the San Antonio Segment of the Balcones Fault Zone</p></div>
+      <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;">
+        <div class="text-frame">
+        <p>Select a location within the San Antonio Segment of the Balcones Fault Zone to discover the wonders of the Edwards Aquifer System in central Texas.</p>
+        </div>
+        <!-- <div class="text-select text-spacer-left"><p>Select a location within the San Antonio Segment of the Balcones Fault Zone to discover the beauty of the Edawrds Aquifer System.</p></div> -->
       </div>
-      <div skrollr class="div-fixed z-150" data-1999="left:5rem;" data-2000="opacity:0; top:50rem;" data-3000="opacity:1; top:16rem;">
+      <div skrollr class="div-fixed z-100" data-1999="top:16rem; left:5rem;" data-2000="opacity:0;" data-3000="opacity:1;">
         <div id="major-aquifers" class="interactive interactive-frame aquifers">
           <eaa-aquifers-map></eaa-aquifers-map>
         </div> 
       </div>
-      <div skrollr class="div-fixed z-200" data-1999="top:10.5rem;" data-2000="opacity:0; left:60rem;" data-3000="opacity:1; left:38rem;">
+      <div skrollr class="div-fixed z-450" data-1999="top:52rem;" data-2000="opacity:0; left:50rem;" data-3000="opacity:1; left:18rem;">
         <div class="text-label">
           <p>Texas Major Aquifers</p>
         </div>
@@ -49,8 +52,8 @@
     </div>
 
     <!-- Click Indicator -->
-    <div skrollr class="div-fixed z-200" data-0="top:12.6rem;" data-3500="opacity:0; left:-3rem;" data-4000="opacity:1; left:6.5rem;">
-      <div class="text-suggestion">Select a Map Marker
+    <div skrollr class="div-fixed z-500" data-2999="top:54rem" data-3500="opacity:0; left:-10rem;" data-4000="opacity:1; left:9rem;">
+      <div class="text-suggestion">Select a Map Marker to Continue
         <div id="holder">
           <div class="dot"></div>
           <div class="pulse"></div>      
@@ -58,4 +61,4 @@
       </div>
     </div>
   </div>
-</div>
+<!-- </div>
