--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -1,117 +1,54 @@
 <div class="springs">
-  <!-- Slide 0 -->
-  <div data-parallax-background class="slide" id="springs-slide0" data-slide="0" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>Comal Springs</h1></span> -->
-    <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a> 
-    <div class="wrapper">
-      <p alt="">Cool, clear Edwards Aquifer water emerges at Comal Springs, as natural artesian pressure forces the water up the faults and fractures in the overlying rocks.</p>
-      <video class="plxbgvideo bgv-springs-slide0" poster="../images/springs/SpringFlow.jpg" preload="auto" autoplay loop muted volume="0">
-        <source src="../videos/720p/SpringFlow.webm" type="video/webm">
-        <source src="../videos/720p/SpringFlow.mp4" type="video/mp4">
-      </video>
-    </div>
-    <img class="overlay overlay-left" src="../images/springs/com-springs2-800x.jpg" data-stellar-ratio="2.0" data-stellar-vertical-offset="50" alt="">
-    <!-- <img class="overlay overlay-center" src="../images/springs/comal-springs3-800x.jpg" data-stellar-ratio="1.3" data-stellar-vertical-offset="0" alt=""> -->
-    <img class="overlay overlay-right" src="../images/springs/comal-springs3-800x.jpg" data-stellar-ratio="2.0" data-stellar-vertical-offset="50" alt=""> 
-  </div>
-
-  <!-- Slide 1 -->
-  <div data-parallax-background class="slide" id="springs-slide1" data-slide="1" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>Video 1</h1></span> -->
-    <a class="button-scroll" data-slide="2" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">Spring flow is dependant upon recharge and conservation.  Declining aquifer leves can result in reduced flow, or no flow if water levels drop below the elevation of the spring openings.</p>
-      <video class="plxbgvideo bgv-springs-slide1" poster="../images/springs/ComalSpringsRun.jpg" preload="auto" autoplay loop muted volume="0">
-        <source src="../videos/720p/ComalSpringsRun.webm" type="video/webm">
-        <source src="../videos/720p/ComalSpringsRun.mp4" type="video/mp4">
-      </video>
-    </div>     
-  </div>
-
-  <!-- Slide 2 -->
-  <div data-parallax-background class="slide" id="springs-slide2" data-slide="2" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>Video 2</h1></span> -->
-    <a class="button-scroll" data-slide="3" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">Spring water provides habitat for aquifer species, water for downstream users, and fresh inflows for the bays and estuaries along the Texas Gulf Coast.</p>
-      <video class="plxbgvideo bgv-springs-slide2" poster="../images/springs/SpringRun.jpg" preload="auto" autoplay loop muted volume="0">
-        <source src="../videos/720p/SpringRun.webm" type="video/webm">
-        <source src="../videos/720p/SpringRun.mp4" type="video/mp4">
-      </video>
-    </div>    
-  </div>
-
-  <!-- Slide 3 -->
-  <div data-parallax-background class="slide" id="springs-slide3" data-slide="3" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>San Marcos Springs</h1></span>  -->
-    <a class="button-scroll" data-slide="4" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">Heading north and east about 20 miles from Comal Springs, you’ll reach San Marcos Springs, the second largest spring system and Texas.</p>
+  <!-- Progress Indicator -->
+  <div skrollr class="progress-hor z-400 centered">
+    <div>
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-0="fill:rgba(113,178,201,1);" data-1000="fill:rgba(113,178,201,1);" data-2000="fill:rgba(66,89,104,1);"></circle></svg>
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-2000="fill:rgba(66,89,104,1);" data-3000="fill:rgba(113,178,201,1);" data-4000="fill:rgba(113,178,201,1);" data-5000="fill:rgba(66,89,104,1);"></circle></svg>
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-5000="fill:rgba(66,89,104,1);" data-6000="fill:rgba(113,178,201,1);" data-7000="fill:rgba(113,178,201,1);" data-8000="fill:rgba(66,89,104,1);"></circle></svg>
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-8000="fill:rgba(66,89,104,1);" data-9000="fill:rgba(113,178,201,1);" data-10000="fill:rgba(113,178,201,1);" data-11000="fill:rgba(66,89,104,1);"></circle></svg>
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-11000="fill:rgba(66,89,104,1);" data-12000="fill:rgba(113,178,201,1);" data-13000="fill:rgba(113,178,201,1);" data-14000="fill:rgba(66,89,104,1);"></circle></svg>
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-14000="fill:rgba(66,89,104,1);" data-15000="fill:rgba(113,178,201,1);" data-16000="fill:rgba(113,178,201,1);" data-17000="fill:rgba(66,89,104,1);"></circle></svg>
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-17000="fill:rgba(66,89,104,1);" data-18000="fill:rgba(113,178,201,1);" data-19000="fill:rgba(113,178,201,1);" data-20000="fill:rgba(66,89,104,1);"></circle></svg>
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-20000="fill:rgba(66,89,104,1);" data-21000="fill:rgba(113,178,201,1);" data-25000="fill:rgba(113,178,201,1);" data-26000="fill:rgba(66,89,104,1);"></circle></svg>
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-26000="fill:rgba(66,89,104,1);" data-27000="fill:rgba(113,178,201,1);" data-28000="fill:rgba(113,178,201,1);" data-29000="fill:rgba(66,89,104,1);"></circle></svg>
+      <svg class="progress-circle-container"><circle skrollr cx="0.5em" cy="0.5em" r="0.5em" data-29000="fill:rgba(66,89,104,1);" data-30000="fill:rgba(113,178,201,1);"></circle></svg>
     </div>
   </div>
 
-  <!-- Slide 4 -->
-  <div data-parallax-background class="slide" id="springs-slide4" data-slide="4" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>Video 3</h1></span>                  -->
-    <a class="button-scroll" data-slide="5" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">Beneath the lake, numerous springs emerge along a common fault line propelling millions of gallons of water to the surface daily.</p>
-      <video class="plxbgvideo bgv-springs-slide4" poster="../images/springs/SanMarcosSprings.jpg" preload="auto" autoplay loop muted volume="0">
-        <source src="../videos/720p/SanMarcosSprings.webm" type="video/webm">
-        <source src="../videos/720p/SanMarcosSprings.mp4" type="video/mp4">
-      </video>
-    </div>   
-  </div>
+  <!-- Backgrounds -->
+  <div skrollr id="waterway-2" class="div-fixed z-100 background flip-image-hor" data-0="opacity:0.1; top:0%;" data-1000="opacity:0.2; top:-4%;" data-30000="opacity:0.2; top:-100%;" data-31000="opacity:0.05;"></div>
 
-  <!-- Slide 5 -->
-  <div data-parallax-background class="slide" id="springs-slide5" data-slide="5" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>Deep Springs</h1></span> -->
-    <a class="button-scroll" data-slide="6" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">EAA technicians and divers from Texas State University work together to take water quality samples from Deep Spring, nearly 30 feet below the surface.</p>
-    </div>  
-  </div>
+  <!-- Section 0 -->
 
-  <!-- Slide 6 -->
-  <div data-parallax-background class="slide" id="springs-slide6" data-slide="6" data-parallax-ratio="0.5">
-    <span class="slideno"><h1 class="text-black">Spring Gauge Data Interactive</h1></span>         
-    <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper interactive">
-      <eaa-gauge-data-interactive-springs></eaa-gauge-data-interactive-springs>
+  <!-- Section 1 -->
+
+  <!-- Section 2 -->
+
+  <!-- Section 3 -->
+
+  <!-- Section 4 -->
+
+  <!-- Section 5 -->
+
+  <!-- Section 6 -->
+
+  <!-- Section 7 -->
+
+  <!-- Section 8 -->
+
+  <!-- Section 9 -->
+
+  <!-- Explore Link -->
+  <div id="end">
+    <div skrollr class="div-fixed z-200" data-30499="left:9rem;" data-30500="opacity:0; top:58rem;" data-31000="opacity:1; top:53.5rem;">
+      <div class="end-link">
+        <a href="#/about">Continue Exploring
+          <div id="holder">
+            <div class="dot"></div>
+            <div class="pulse"></div>      
+          </div>
+        </a>
+      </div>
     </div>
-  </div>
-
-  <!-- Slide 7 -->
-  <div data-parallax-background class="slide" id="springs-slide7" data-slide="7" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>Endangered Species</h1></span>               -->
-    <a class="button-scroll" data-slide="8" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">All the Edwards Aquifer Endangered and Threatened species – including Texas Wild Rice seen here – depend on clean fresh water from the aquifer.</p>
-    </div>
-  </div>
-
-  <!-- Slide 8 -->
-  <div data-parallax-background class="slide" id="springs-slide8" data-slide="8" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>Invasive Species</h1></span>               -->
-    <a class="button-scroll" data-slide="9" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">In addition to water quality concerns, exotic invasive species like these elephant ear plants also threaten the habitat of the native species, by competing for food and altering the original riparian areas.</p>
-    </div>
-  </div>
-
-  <!-- Slide 9 -->
-  <div data-parallax-background class="slide" id="springs-slide9" data-slide="9" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>Habitat Conservation</h1></span>               -->
-    <a class="button-scroll reverse" id="" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">To protect the endangered species long term the EAA, its regional partners, and stakeholders have implemented a comprehensive <a class="nav-link-hcp" href="{{urlHcp}}" title="Habitat Conservation Plan" target="_blank" ng-click="linkModelFunc(urlHcp)">Habitat Conservation Plan</a> to protect spring flow, water quality, and riparian habitat.</p>
-    </div>
-  </div>
-
-  <!-- Slide 10 -->
-  <div class="slide" id="springs-slide10" data-slide="10" data-parallax-ratio="0.5">
-    <span class="slideno"><h1>End</h1></span>                  
-    <div class="wrapper">
-    </div> 
   </div>
 </div>
