--- a/app/styles/skrollr.css
+++ b/app/styles/skrollr.css
@@ -405,17 +405,13 @@ body {
 #cons-image-22 { background-image: url(../images/conservation/EAAOsaws20120720_800x.jpg); }
 
 /* Springs */
-#springs-image-00 { background-image: url(../images/springs/XXX); }
-#springs-image-01 { background-image: url(../images/springs/XXX); }
-#springs-image-02 { background-image: url(../images/springs/XXX); }
-#springs-image-03 { background-image: url(../images/springs/XXX); }
-#springs-image-04 { background-image: url(../images/springs/XXX); }
-#springs-image-05 { background-image: url(../images/springs/XXX); }
-#springs-image-06 { background-image: url(../images/springs/XXX); }
-#springs-image-07 { background-image: url(../images/springs/XXX); }
-#springs-image-08 { background-image: url(../images/springs/XXX); }
-#springs-image-09 { background-image: url(../images/springs/XXX); }
-#springs-image-10 { background-image: url(../images/springs/XXX); }
+#springs-image-00 { background-image: url(../images/springs/com-springs2-800x.jpg); }
+#springs-image-01 { background-image: url(../images/springs/comal-springs3-800x.jpg); }
+#springs-image-02 { background-image: url(../images/springs/aerial_view_web_hd.jpg); }
+#springs-image-03 { background-image: url(../images/springs/EAAaquarena20120702_8316_web_hd.jpg); }
+#springs-image-04 { background-image: url(../images/springs/EAArice20120503_3620_web_hd.jpg); }
+#springs-image-05 { background-image: url(../images/springs/EAAOriparianrandy20120801_0404_web_hd.jpg); }
+#springs-image-06 { background-image: url(../images/springs/Looking-Underwater_0020_web_hd.jpg); }
 
 /* Testing */
 .scroll-index {
