--- a/app/styles/contact.css
+++ b/app/styles/contact.css
@@ -1,3 +1,15 @@
+.contact {
+  margin-top: 5rem;
+}
+.contact-heading {
+  margin-left: 2rem;
+}
+.contact-heading > h3 {
+  margin-bottom: 1.5rem;
+}
+.contact-entry {
+  margin-left: 3rem;
+}
 .address-block {
   display: inline-block;
 }
