--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,20 +1,22 @@
 <div class="container">
   <div class="contact">
     <!-- Backgrounds -->
-    <div skrollr id="ripple-1" class="div-fixed z-50 background flip-image-hor" data-0="opacity:0.1; left:-2rem;" data-1="top:0%;" data-400="top:-10%;"></div>
+    <div id="ripple-1" class="div-fixed z-50 background flip-image-hor" style="opacity:0.1; margin-left:-4rem; margin-top:-3rem;"></div>
 
-    <h1>Contact EAA<br/><small>Stay informed about your aquifer</small></h1>
-    <div class="contact-heading">
-      <h3>Edwards Aquifer Authority</h3>
-      <div class="contact-entry">
-        <p><span class="glyphicon glyphicon-envelope glyph-spacing-right"></span><a href="mailto:info@edwardsaquifer.org?Subject=Aquiferium%20Question" target="_blank">info@edwardsaquifer.org</a></p>
-        <p><span class="glyphicon glyphicon-earphone glyph-spacing-right"></span>Phone: <a href="tel://1-210-222-2204">(210) 222-2204</a> or <a href="tel://1-800-292-1047">1-800-292-1047</a></p>
-        <p><span class="glyphicon glyphicon-send glyph-spacing-right"></span>Fax: (210) 222-9869</p>
-        <p><span class="glyphicon glyphicon-home glyph-spacing-right"></span>
-          <span class="address-block-line1">900 E. Quincy</span>
-          <br>
-          <span class="address-block-line2">San Antonio, TX 78215</span>
-        </p>
+    <div class="z-300">
+      <h1>Contact EAA<br/><small>Stay informed about your aquifer</small></h1>
+      <div class="contact-heading">
+        <h3>Edwards Aquifer Authority</h3>
+        <div class="contact-entry">
+          <p><span class="glyphicon glyphicon-envelope glyph-spacing-right"></span><a href="mailto:info@edwardsaquifer.org?Subject=Aquiferium%20Question" target="_blank">info@edwardsaquifer.org</a></p>
+          <p><span class="glyphicon glyphicon-earphone glyph-spacing-right"></span>Phone: <a href="tel://1-210-222-2204">(210) 222-2204</a> or <a href="tel://1-800-292-1047">1-800-292-1047</a></p>
+          <p><span class="glyphicon glyphicon-send glyph-spacing-right"></span>Fax: (210) 222-9869</p>
+          <p><span class="glyphicon glyphicon-home glyph-spacing-right"></span>
+            <span class="address-block-line1">900 E. Quincy</span>
+            <br>
+            <span class="address-block-line2">San Antonio, TX 78215</span>
+          </p>
+        </div>
       </div>
     </div>
   </div>
