--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -15,8 +15,8 @@
 
     <!-- Section 0 -->
     <div id="section00">
-      <div skrollr class="div-fixed z-400" data-0="left:5rem;" data-1000="opacity:1; top:6.6rem;" data-2000="opacity:0; top:0rem;">
-        <div class="text-title text-spacer-left"><h1>Explore the Edwards Aquifer</h1></div>
+      <div skrollr class="div-fixed z-400" data-0="left:8rem;" data-1000="opacity:1; top:6.6rem;" data-2000="opacity:0; top:0rem;">
+        <div class="text-title"><h1>Explore the Edwards Aquifer</h1></div>
       </div>
       <div skrollr class="div-fixed z-100" data-999="top:16rem; left:5rem;" data-1000="opacity:1;" data-2000="opacity:0;">
         <video class="video-frame" preload="auto" autoplay loop muted>
