Wells interactive fixed for skrollr approach.

--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -145,8 +145,8 @@
         <p alt="">Historical data representing the rate of recharge within the aquifer for each year measured in thousands of acre feet.<br/>The blue segment of the aquifer represents the recharge zone.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-100" data-16999="top:16rem;" data-17000="opacity:0; left:50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:-50rem;">
-      <div id="recharge" class="interactive interactive-frame">
+    <div skrollr class="div-fixed z-500" data-16999="top:16rem;" data-17000="opacity:0; left:50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:-50rem;">
+      <div id="interactive" class="interactive interactive-frame">
         <eaa-gauge-data-interactive-recharge></eaa-gauge-data-interactive-recharge>
       </div> 
     </div>
