--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -220,8 +220,8 @@
         <p alt="">Historical data representing the well levels within the aquifer for each year measured in feet above mean sea level.<br/>The markers indicate stream gauges used to measure the aquifer levels.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-100" data-22999="top:16rem;" data-23000="opacity:0; left:50rem;" data-24000="opacity:1; left:5rem;" data-25000="opacity:1; left:5rem;" data-26000="opacity:0; left:-50rem;">
-      <div id="recharge" class="interactive interactive-frame">
+    <div skrollr class="div-fixed z-500" data-22999="top:16rem;" data-23000="opacity:0; left:50rem;" data-24000="opacity:1; left:5rem;" data-25000="opacity:1; left:5rem;" data-26000="opacity:0; left:-50rem;">
+      <div id="interactive" class="interactive interactive-frame">
         <eaa-gauge-data-interactive-wells></eaa-gauge-data-interactive-wells>
       </div>
     </div>
