--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -156,8 +156,8 @@
         <p alt="">Historical data representing the spring levels within the aquifer for each year measured in feet above mean sea level.<br/>The markers indicate stream gauges used to measure the aquifer levels.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-100" data-16999="top:16rem;" data-17000="opacity:0; left:50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:-50rem;">
-       <div id="recharge" class="interactive interactive-frame">
+    <div skrollr class="div-fixed z-500" data-16999="top:16rem;" data-17000="opacity:0; left:50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:-50rem;">
+       <div id="interactive" class="interactive interactive-frame">
         <eaa-gauge-data-interactive-springs></eaa-gauge-data-interactive-springs>
       </div>
     </div>
